--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "author": "c-auri",
   "devDependencies": {
+    "eslint": "^8.36.0",
+    "eslint-webpack-plugin": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.76.2",
     "webpack-cli": "^5.0.1",
