--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "author": "c-auri",
   "devDependencies": {
+    "css-loader": "^6.7.3",
     "eslint": "^8.36.0",
     "eslint-webpack-plugin": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
+    "style-loader": "^3.3.2",
     "webpack": "^5.76.2",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.12.0"
